--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,13 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
-            - uses: pdm-project/setup-pdm@v2
+            - uses: github/super-linter@v4
+              env:
+                  VALIDATE_ALL_CODEBASE: false
+                  PYTHON_PYLINT: true
+                  DEFAULT_BRANCH: develop
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
             - uses: pdm-project/setup-pdm@v2
               name: Setup Python
               with:
