--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "uwsgi>=2.0.20",
     "flask-restful>=0.3.9",
     "pytest-flask>=1.2.0",
+    "pylint>=2.15.3",
+    "flake8>=5.0.4",
 ]
 requires-python = ">=3.10"
 license = {text = "MIT"}
